--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set (CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/liberty/cmake)
 include (AddThreads)
 
 find_package (PkgConfig REQUIRED)
-pkg_check_modules (dependencies REQUIRED libpulse x11)
+pkg_check_modules (dependencies REQUIRED libpulse x11 xext xextproto)
 pkg_check_modules (gdm gdm glib-2.0 gio-2.0)
 
 option (WITH_GDM "Compile with GDM support" ${gdm_FOUND})
@@ -53,6 +53,9 @@ endif (WITH_GDM)
 
 add_executable (siprandom siprandom.c)
 target_link_libraries (siprandom ${project_libraries})
+
+add_executable (big-brother big-brother.c)
+target_link_libraries (big-brother ${project_libraries})
 
 # The files to be installed
 include (GNUInstallDirs)
