--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "liberty"]
 	path = liberty
-	url = https://github.com/pjanouch/liberty.git
+	url = https://git.janouch.name/p/liberty.git
