Don't install orphan supplementary files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,21 +71,23 @@ include (GNUInstallDirs)
 set (SYSTEMD_UNITDIR /lib/systemd/system
 	CACHE PATH "Base directory for systemd unit files")
 
-configure_file (${PROJECT_SOURCE_DIR}/fancontrol-ng.service.in
-	${PROJECT_BINARY_DIR}/fancontrol-ng.service @ONLY)
-install (FILES fancontrol-ng.conf.example
-	DESTINATION ${CMAKE_INSTALL_DATADIR}/fancontrol-ng)
+if ("${CMAKE_SYSTEM_NAME}" STREQUAL Linux)
+	configure_file (${PROJECT_SOURCE_DIR}/fancontrol-ng.service.in
+		${PROJECT_BINARY_DIR}/fancontrol-ng.service @ONLY)
+	install (FILES fancontrol-ng.conf.example
+		DESTINATION ${CMAKE_INSTALL_DATADIR}/fancontrol-ng)
 
-configure_file (${PROJECT_SOURCE_DIR}/priod.service.in
-	${PROJECT_BINARY_DIR}/priod.service @ONLY)
-install (FILES priod.conf.example
-	DESTINATION ${CMAKE_INSTALL_DATADIR}/priod)
+	configure_file (${PROJECT_SOURCE_DIR}/priod.service.in
+		${PROJECT_BINARY_DIR}/priod.service @ONLY)
+	install (FILES priod.conf.example
+		DESTINATION ${CMAKE_INSTALL_DATADIR}/priod)
 
-# System-wide unit files should be installed under /lib and not /usr/lib
-install (FILES
-	${PROJECT_BINARY_DIR}/fancontrol-ng.service
-	${PROJECT_BINARY_DIR}/priod.service
-	DESTINATION "${SYSTEMD_UNITDIR}")
+	# System-wide unit files should be installed under /lib and not /usr/lib
+	install (FILES
+		${PROJECT_BINARY_DIR}/fancontrol-ng.service
+		${PROJECT_BINARY_DIR}/priod.service
+		DESTINATION "${SYSTEMD_UNITDIR}")
+endif ()
 
 if (WITH_GDM)
 	install (TARGETS gdm-switch-user DESTINATION ${CMAKE_INSTALL_BINDIR})
