CMakeLists.txt: install optional targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,12 +60,14 @@ target_link_libraries (wmstatus
 add_threads (wmstatus)
 
 if (WITH_USB)
+	list (APPEND targets elksmart-comm)
 	add_executable (elksmart-comm elksmart-comm.c)
 	target_include_directories (elksmart-comm PUBLIC ${libusb_INCLUDE_DIRS})
 	target_link_directories (elksmart-comm PUBLIC ${libusb_LIBRARY_DIRS})
 	target_link_libraries (elksmart-comm ${libusb_LIBRARIES})
 endif ()
 if (WITH_GDM)
+	list (APPEND targets gdm-switch-user)
 	add_executable (gdm-switch-user gdm-switch-user.c)
 	target_include_directories (gdm-switch-user PUBLIC ${gdm_INCLUDE_DIRS})
 	target_link_directories (gdm-switch-user PUBLIC ${gdm_LIBRARY_DIRS})
